tests/test_assets/semantic/invalid/definite_assignment/if_missing_paths.cog
missing_else::(condition: bool) -> i32 {
    value: i32;

    if condition {
        value = 10;
    }

    return value;
}

only_one_branch_initializes::(condition: bool) -> i32 {
    value: i32;

    if condition {
        value = 20;
    } else {
        condition;
    }

    return value;
}

nested_path_missing::(outer, inner: bool) -> i32 {
    value: i32;

    if outer {
        if inner {
            value = 30;
        }
    } else {
        value = 40;
    }

    return value;
}
