tests/test_assets/semantic/invalid/definite_assignment/if_missing_paths.expected
semantic error at line 8: variable 'value' may be uninitialized
semantic error at line 20: variable 'value' may be uninitialized
semantic error at line 34: variable 'value' may be uninitialized
3 semantic errors generated.
